<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.movie_search_filter.MovieSearchFilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitle="@string/fragment_movie_search_filter_app_bar_subtitle"
            app:subtitleCentered="true" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="invisible">


            <LinearLayout
                android:id="@+id/selectCountyButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_weight="0.35"
                    android:gravity="center|start"
                    android:text="@string/fragment_movie_search_filter_dialog_country"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/countries"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.65"
                    android:ellipsize="end"
                    android:gravity="center|end"
                    android:maxLines="1"
                    android:text="@string/fragment_movie_search_filter_any_country"
                    android:textSize="16sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/selectYearRangeButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:text="@string/fragment_movie_search_filter_year"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/years"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/fragment_movie_search_filter_any"
                    android:textSize="16sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/selectAgeRatingButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/fragment_movie_search_filter_age_rating"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/ageRating"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:text="@string/fragment_movie_search_filter_age_rating_any"
                        android:textSize="16sp" />
                </FrameLayout>

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/ageRatingRangeSlider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="21"
                    app:values="@array/age_ration_initial_slider_values" />
            </LinearLayout>

            <Button
                android:id="@+id/showButton"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/fragment_movie_search_filter_show" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loadingIndicator"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <LinearLayout
        android:id="@+id/errorMassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragment_movie_search_something_went_wrong" />

        <Button
            android:id="@+id/retryButton"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:icon="@drawable/baseline_refresh_24" />
    </LinearLayout>

</FrameLayout>